add swag docs for API
